libs/openscad-parser/test/corpus/advanced/comprehensions.txt
==================
List comprehensions — for and if
==================

echo([for (i = [0:10]) i]);
echo([for (i = [0:10]) if (i % 2 == 0) i]);

---

(source_file
  (echo_expression arguments: (arguments (list (list_comprehension (for_clause (assignments (assignment name: (identifier) value: (range start: (integer) end: (integer)))) (expression (identifier)))))) (expression))
  (echo_expression arguments: (arguments (list (list_comprehension (for_clause (assignments (assignment name: (identifier) value: (range start: (integer) end: (integer)))) (expression (if_clause condition: (parenthesized_expression (binary_expression left: (identifier) right: (integer))) consequence: (identifier))))))) (expression))

==================
Each — flatten list
==================

echo([each [1,2,3]]);

---

(source_file (echo_expression arguments: (arguments (list (each (list (integer) (integer) (integer))))) (expression)))
