libs/openscad-parser/test/corpus/advanced/deep-nested-modules.txt
==================
Deep nested user-defined modules
==================

module c(n) { cube(n); }
module b(n) { translate([n,0,0]) c(n); }
module a(n) { color("blue") b(n); }
a(3);

---

(source_file
  (module_item name: (identifier) parameters: (parameters (parameter (identifier)))
    body: (union_block (transform_chain (module_call name: (identifier) arguments: (arguments (number))) (statement))))
  (module_item name: (identifier) parameters: (parameters (parameter (identifier)))
    body: (union_block (transform_chain (module_call name: (identifier) arguments: (arguments (list (identifier) (number) (number))))
      (transform_chain (module_call name: (identifier) arguments: (arguments (identifier))) (statement)))))
  (module_item name: (identifier) parameters: (parameters (parameter (identifier)))
    body: (union_block (transform_chain (module_call name: (identifier) arguments: (arguments (string)))
      (transform_chain (module_call name: (identifier) arguments: (arguments (identifier))) (statement)))))
  (transform_chain (module_call name: (identifier) arguments: (arguments (number))) (statement)))
