libs/openscad-parser/test/corpus/advanced/extrusions-and-projection.txt
==================
Advanced transformations — extrusions and projection
==================

linear_extrude(height=10, twist=720, slices=200) rotate_extrude(angle=180) circle(10);
projection(cut=true) union() { cube(10); sphere(5); }

---

(source_file
  (transform_chain
    (module_call name: (identifier)
      arguments: (arguments (assignment name: (identifier) value: (number))
                            (assignment name: (identifier) value: (number))
                            (assignment name: (identifier) value: (number))))
    (transform_chain
      (module_call name: (identifier) arguments: (arguments (assignment name: (identifier) value: (number))))
      (transform_chain (module_call name: (identifier) arguments: (arguments (number))) (statement))))
  (transform_chain
    (module_call name: (identifier)
      arguments: (arguments (assignment name: (identifier) value: (boolean))))
    (union_block
      (transform_chain (module_call name: (identifier) arguments: (arguments (number))) (statement))
      (transform_chain (module_call name: (identifier) arguments: (arguments (number))) (statement)))))
