libs/openscad-parser/test/corpus/advanced/indexing-dot-xyz.txt
==================
Dot indexing x/y/z
==================

pt = [1,2,3];
echo(pt.x, pt.y, pt.z);

---

(source_file
  (var_declaration (assignment name: (identifier) value: (list (number) (number) (number))))
  (echo_expression arguments: (arguments
    (dot_index_expression value: (identifier) index: (identifier))
    (dot_index_expression value: (identifier) index: (identifier))
    (dot_index_expression value: (identifier) index: (identifier)))))
