libs/openscad-parser/test/corpus/advanced/special-vars-and-operators.txt
==================
Special variables and operator precedence
==================

$fa = 12; $fs = 0.5; $fn = 64;
$preview = true; $t = 0;
a = 1 + 2 * 3 ^ 2;
b = (1 + 2) * (3 - 4) / 5;
c = true && false || !true;

---

(source_file
  (var_declaration (assignment name: (special_variable (identifier)) value: (number)))
  (var_declaration (assignment name: (special_variable (identifier)) value: (number)))
  (var_declaration (assignment name: (special_variable (identifier)) value: (number)))
  (var_declaration (assignment name: (special_variable (identifier)) value: (boolean)))
  (var_declaration (assignment name: (special_variable (identifier)) value: (number)))
  (var_declaration (assignment name: (identifier)
    value: (binary_expression left: (number) right: (binary_expression left: (number) right: (binary_expression left: (number) right: (number))))))
  (var_declaration (assignment name: (identifier)
    value: (binary_expression left: (parenthesized_expression (binary_expression left: (number) right: (number)))
                              right: (binary_expression left: (parenthesized_expression (binary_expression left: (number) right: (number))) right: (number)))))
  (var_declaration (assignment name: (identifier)
    value: (binary_expression left: (binary_expression left: (boolean) right: (boolean)) right: (unary_expression (boolean))))))
