libs/openscad-parser/test/corpus/advanced/transform-ordering.txt
==================
Transform ordering chain (simplified)
==================

color("red") translate([5,0,0]) rotate([0,0,90]) cube(1);

---

(source_file
  (transform_chain
    (module_call name: (identifier) arguments: (arguments (string)))
    (transform_chain
      (module_call name: (identifier) arguments: (arguments (list (integer) (integer) (integer))))
      (transform_chain
        (module_call name: (identifier) arguments: (arguments (list (integer) (integer) (integer))))
        (transform_chain (module_call name: (identifier) arguments: (arguments (integer))) (statement))))))
