libs/openscad-parser/test/corpus/basic/comments-robustness.txt
==================
Comments interleaving in parameters and blocks
==================

module m(/*p1*/ a, // p2
  b=/* mid */2, /* trailing */) {
  /* before */ translate([/*x*/ a, b, 0]) // after name
    /* mid */ cube(a); // end
}

m(/*call*/ 1, /*call*/ 3);

---

(source_file
  (module_item
    name: (identifier)
    parameters: (parameters (parameter (identifier)) (parameter (assignment name: (identifier) value: (number))))
    body: (union_block
      (transform_chain
        (module_call name: (identifier) arguments: (arguments (list (identifier) (identifier) (integer))))
        (transform_chain (module_call name: (identifier) arguments: (arguments (identifier))) (statement)))))
  (transform_chain (module_call name: (identifier) arguments: (arguments (integer) (integer))) (statement)))
