libs/openscad-parser/test/corpus/basic/literals.txt
==================
Literals — strings, numbers, booleans, undef
==================

echo("hello\nworld", 1);
echo(3.14e+10, true, undef);

---

(source_file
  (echo_expression
    arguments: (arguments (string (escape_sequence)) (number))
    (expression))
  (echo_expression
    arguments: (arguments (number) (boolean) (undef))
    (expression)))
