libs/openscad-parser/test/corpus/basic/primitives.txt
==================
Primitive shapes — cube/sphere/cylinder
==================

cube(10);
sphere(d=20);
cylinder(h=5, r1=2, r2=3);

---

(source_file
  (transform_chain
    (module_call
      name: (identifier)
      arguments: (arguments (number)))
    (statement))
  (transform_chain
    (module_call
      name: (identifier)
      arguments: (arguments
        (assignment name: (identifier) value: (number))))
    (statement))
  (transform_chain
    (module_call
      name: (identifier)
      arguments: (arguments
        (assignment name: (identifier) value: (number))
        (assignment name: (identifier) value: (number))
        (assignment name: (identifier) value: (number))))
    (statement)))

==================
Primitive shapes — polyhedron
==================

polyhedron(points=[[0,0,0],[1,0,0],[0,1,0]], faces=[[0,1,2]]);

---

(source_file
  (transform_chain
    (module_call
      name: (identifier)
      arguments: (arguments
        (assignment name: (identifier)
          value: (list (list (number) (number) (number))
                       (list (number) (number) (number))
                       (list (number) (number) (number))))
        (assignment name: (identifier)
          value: (list (list (number) (number) (number)))))
    )
    (statement)))
