libs/openscad-parser/test/corpus/basic/strings-escapes.txt
==================
String escapes — unicode and hex
==================

echo("hello\nworld", "tab\t", "slash\\", "quote\"", "A:\u0041", "smile:\u{1F600}", "X:\x41");

---

(source_file
  (echo_expression
    arguments: (arguments
      (string (escape_sequence))
      (string (escape_sequence))
      (string (escape_sequence))
      (string (escape_sequence))
      (string (escape_sequence))
      (string (escape_sequence))
      (string (escape_sequence)))))
