libs/openscad-parser/test/corpus/basic/transformations.txt
==================
Basic transformations — translate/rotate/scale
==================

translate([1,2,3]) cube(5);
rotate([0,90,0]) sphere(5);
scale([2,2,2]) cylinder(h=10, r=2);

---

(source_file
  (transform_chain
    (module_call
      name: (identifier)
      arguments: (arguments (list (number) (number) (number))))
    (transform_chain
      (module_call
        name: (identifier)
        arguments: (arguments (number)))
      (statement)))
  (transform_chain
    (module_call
      name: (identifier)
      arguments: (arguments (list (number) (number) (number))))
    (transform_chain
      (module_call
        name: (identifier)
        arguments: (arguments (number)))
      (statement)))
  (transform_chain
    (module_call
      name: (identifier)
      arguments: (arguments (list (number) (number) (number))))
    (transform_chain
      (module_call
        name: (identifier)
        arguments: (arguments
          (assignment name: (identifier) value: (number))
          (assignment name: (identifier) value: (number))))
      (statement))))

==================
Modifiers — debug/highlight/show-only/disable
==================

# cube(1);
! sphere(2);
% cylinder(3);
* translate([1,0,0]) cube(1);

---

(source_file
  (transform_chain (modifier) (module_call name: (identifier) arguments: (arguments (number))) (statement))
  (transform_chain (modifier) (module_call name: (identifier) arguments: (arguments (number))) (statement))
  (transform_chain (modifier) (module_call name: (identifier) arguments: (arguments (number))) (statement))
  (transform_chain (modifier) (module_call name: (identifier) arguments: (arguments (list (number) (number) (number))))
                   (transform_chain (module_call name: (identifier) arguments: (arguments (number))) (statement))))
