libs/openscad-parser/test/corpus/builtins.txt
==================
Echo Statement
==================

echo("Hello", 10, true);

---

(source_file
  (echo_statement
    arguments: (arguments
      (string)
      (integer)
      (boolean))))

==================
Render
==================

render(convexity = 2) cube(10);

---

(source_file
  (transform_chain
    (module_call
      name: (identifier)
      arguments: (arguments
        (assignment
          name: (identifier)
          value: (integer))))
    (transform_chain
      (module_call
        name: (identifier)
        arguments: (arguments
          (integer))))))

==================
Children
==================

module container() {
    children(0);
    children([1:2]);
}

---

(source_file
  (module_item
    name: (identifier)
    parameters: (parameters)
    body: (union_block
      (transform_chain
        (module_call
          name: (identifier)
          arguments: (arguments
            (integer))))
      (transform_chain
        (module_call
          name: (identifier)
          arguments: (arguments
            (range
              start: (integer)
              end: (integer))))))))

==================
Import
==================

import("file.stl", convexity=3);

---

(source_file
  (transform_chain
    (module_call
      name: (identifier)
      arguments: (arguments
        (string)
        (assignment
          name: (identifier)
          value: (integer))))))

==================
Include and Use
==================

include <library.scad>;
use <../utils.scad>;

---

(source_file
  (include_statement
    (include_path))
  (use_statement
    (include_path)))
