libs/openscad-parser/test/corpus/errors.txt
==================
Missing Semicolon
==================

x = 10
y = 20;

---

(source_file
  (var_declaration
    (assignment
      name: (identifier)
      value: (integer))
    (MISSING ";"))
  (var_declaration
    (assignment
      name: (identifier)
      value: (integer))))

==================
Invalid Syntax
==================

module ( { }

---

(source_file
  (ERROR)
  (union_block))
